# pipewire-module-spdif-encode

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  meson.build  meson_options.txt
config/: spdif-encode.conf
src/: encoder-ac3.cpp  encoder-ac3.h  encoder-av.cpp  encoder-av.h  encoder-dts.cpp  encoder-dts.h  encoder.h  iec61937.h  module-spdif-encode.cpp
tests/: generate-dts-spdif.cpp  meson.build  play-dts-test.sh  test-encoder-ac3.cpp  test-encoder-dts.cpp  test-iec61937.cpp
